<resources>
    <string name="app_name">Météo App</string>

    <!-- Activity Main -->

    <!-- TextView -->

    <string name="typeTerrain">Type de terrain :</string>
    <string name="desc">Cette application sert à trouver un terrain de tennis libre en fonction caractéristiques de celui-ci et de la météo !</string>


    <!-- CheckBox -->

    <string name="dur">Dur</string>
    <string name="terreBattue">Terre battue</string>
    <string name="gazon">Gazon</string>

    <!-- Button -->

    <string name="choixJour">Choisissez quel jour !</string>

    <string-array name="reservation_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
